refactor: fix mapgroup
