# internal/handler/router.go
@@ -300,6 +300,10 @@ func NewRouter(cfg *config.Config, logger applog.Logger, deps Dependencies) *gin
 		venues.GET("/:id/surveys/:surveyID", surveyH.Get)
 		venues.PUT("/:id/surveys/:surveyID", surveyH.Update)
 		venues.DELETE("/:id/surveys/:surveyID", surveyH.Delete)
+		venues.POST("/:id/surveys/:surveyID/duplicate", surveyH.Duplicate)
+		venues.GET("/:id/surveys/:surveyID/stats", surveyH.Stats)
+		venues.GET("/:id/surveys/:surveyID/participants", surveyH.ListParticipants)
+		venues.GET("/:id/surveys/:surveyID/export-csv", surveyH.ExportCSV)
 		venues.POST("/:id/surveys/:surveyID/questions", surveyH.CreateQuestion)
 		venues.PUT("/:id/surveys/:surveyID/questions/:questionID", surveyH.UpdateQuestion)
 		venues.DELETE("/:id/surveys/:surveyID/questions/:questionID", surveyH.DeleteQuestion)
